GPC/tests/examples/fail/wrongTypeDecl.gpc


int wrongTypeDecl() {
    int x = 5 == 6;
    return x;
}
